--- a/app/design/frontend/default/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/default/default/template/customer/form/edit.phtml
@@ -34,7 +34,7 @@
         <div class="club_ecoupon_center cs-clear">
             <div class="club_ecoupon_nav">
                 <div class="club_welcome">
-                    <?php echo $this->__("Hi")?> <?php echo $this->getCustomer()->getFirstname();?> ! <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", $this->getCustomer()->getUsePoints())  ?>  
+                    <?php echo $this->__("Hi")?> <?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname();?>,<br/> <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", Mage::getSingleton('customer/session')->getCustomer()->getUsePoints())  ?>
                 </div>
                 <a class="club_logout" href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>customer/account/logout/"><?php echo $this->__("LOGOUT")?></a>
                 <div class="club_navlist">
@@ -46,7 +46,7 @@
                 </div>
                 <div class="cs-clear">
                     <!-- <a href="#" class="club_giftcardcheckout">CHECK OUT</a> -->
-                    <a href="giftproducts.html" class="club_navlist_gogift"><?php echo $this->__("Go to Gift Exchange")?></a>
+                    <a href="<?php echo $this->getUrl("giftproducts.html")?>" class="club_navlist_gogift"><?php echo $this->__("Go to Gift Exchange")?></a>
                 </div>
             </div>
 
@@ -63,7 +63,7 @@
                         <li><span><?php echo $this->__("Zip/Post code")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getCustomerZip()) ?></strong></li>
                     </ul>
                     <ul class="club_meminfolist2">
-                        <li><span><?php echo $this->__("VIP Ctard")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getVipCard()) ?></strong></li>
+                        <li><span><?php echo $this->__("VIP Card")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getVipCard()) ?></strong></li>
                         <li><span><?php echo $this->__("VIP level")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getVipLevel()) ?></strong></li>
                         <li><span><?php echo $this->__("Join date")?></span><strong><?php echo $this->htmlEscape(date('Y-m-d', strtotime($this->getCustomer()->getCardValidity()))) ?></strong></li>
                         <li><span><?php echo $this->__("Points")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getUsePoints()) ?></strong></li>
