--- a/app/design/frontend/default/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/default/template/catalog/product/view.phtml
@@ -33,166 +33,183 @@
 ?>
 <div class="page page_club">
     <div class="club_ecoupon_center cs-clear">
-    <?php $_helper = $this->helper('catalog/output'); ?>
-    <?php $_product = $this->getProduct(); ?>
-    <script type="text/javascript">
-        var optionsPrice = new Product.OptionsPrice(<?php echo $this->getJsonConfig() ?>);
-    </script>
-    <div id="messages_product_view"><?php echo $this->getMessagesBlock()->getGroupedHtml() ?></div>
-    <div class="product-view">
-        <div class="product-essential">
-        <form action="<?php echo $this->getSubmitUrl($_product) ?>" method="post" id="product_addtocart_form"<?php if($_product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?>>
-            <div class="no-display">
-                <input type="hidden" name="product" value="<?php echo $_product->getId() ?>" />
-                <input type="hidden" name="related_product" id="related-products-field" value="" />
+        <div class="club_ecoupon_nav">
+            <div class="club_welcome">
+                <?php echo $this->__("Hi")?> <?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname();?> ! <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", Mage::getSingleton('customer/session')->getCustomer()->getUsePoints())  ?>
             </div>
-           <div class="product-img-box">
-                <?php echo $this->getChildHtml('media') ?>
-
-                <?php echo $this->getChildHtml('addto') ?>
+            <a class="club_logout" href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>customer/account/logout/"><?php echo $this->__("LOGOUT")?></a>
+            <div class="club_navlist">
+                <a href="<?php echo $this->getUrl("customer/account/edit/")?>"><?php echo $this->__("My Account")?></a>
+                <a href="<?php echo $this->getUrl("wishlist")?>"><?php echo $this->__("My wishlist")?></a>
+                <a href="<?php echo $this->getUrl("giftproducts.html")?>"><?php echo $this->__("Giftcard")?></a>
             </div>
-            <div class="product-shop">
-                <div class="product-name">
-                    <h1><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></h1>
-                </div>
-
-    <div class="price-sku">
-     <?php if ($_product->getSku()):?>
-                            <div class="sku"><?php echo $this->__('Exchange Code:') ?> <?php echo $_product->getSku() ?></div>
-                <?php endif;?>
-             <?php //echo $this->getTierPriceHtml() ?>
-                 <div class="price-wrapper">
-                    <div class="price-lavel"><?php echo $this->__('Market Price:')?></div>
-                    <?php echo $this->getChildHtml('product_type_data') ?>
-                </div>
-                </div>
-                <?php //echo $this->getReviewsSummaryHtml($_product, false, true)?>
-                <?php //echo $this->getChildHtml('alert_urls') ?>
-                <?php //echo $this->getChildHtml('product_type_data') ?>
-                <?php //echo $this->getTierPriceHtml() ?>
-                <!-- Add New Code Here -->
-        <?php if(Mage::getSingleton('customer/session')->isLoggedIn()):?>
-                <span class="attribute-title"><?php echo $this->__('Required Points:')?></span><span class="attributes_choose need-points"><ul><li><?php echo Mage::helper('points')->getProductPoints($_product); ?><?php echo $this->__('Points')?></li></ul></span>
-                <?php else:?>
-
-                <?php echo $this->__('Login to get the required points')?>
-                <?php endif?>
-
-                <!-- End -->
-                <?php echo $this->getChildHtml('extrahint') ?>
-
-                <?php if (!$this->hasOptions()):?>
-                    <div class="add-to-box">
-                        <?php if($_product->isSaleable()): ?>
-                            <?php echo $this->getChildHtml('addtocart') ?>
-                        <?php else: ?>
-                             <?php echo $this->getChildHtml('addtocart') ?>
-                        <?php endif; ?>
-                        <?php //echo $this->getChildHtml('addto') ?>
+        </div>
+        <div class="club_ecoupon_com club_point">
+            <?php $_helper = $this->helper('catalog/output'); ?>
+            <?php $_product = $this->getProduct(); ?>
+            <script type="text/javascript">
+                var optionsPrice = new Product.OptionsPrice(<?php echo $this->getJsonConfig() ?>);
+            </script>
+            <div id="messages_product_view"><?php echo $this->getMessagesBlock()->getGroupedHtml() ?></div>
+            <div class="product-view">
+                <div class="product-essential">
+                <form action="<?php echo $this->getSubmitUrl($_product) ?>" method="post" id="product_addtocart_form"<?php if($_product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?>>
+                    <div class="no-display">
+                        <input type="hidden" name="product" value="<?php echo $_product->getId() ?>" />
+                        <input type="hidden" name="related_product" id="related-products-field" value="" />
                     </div>
-                    <?php echo $this->getChildHtml('extra_buttons') ?>
+                   <div class="product-img-box">
+                        <?php echo $this->getChildHtml('media') ?>
 
-                <?php endif; ?>
+                        <?php echo $this->getChildHtml('addto') ?>
+                    </div>
+                    <div class="product-shop">
+                        <?php if ($_product->getSku()):?>
+                            <div class="product-attr">
+                                <div class="product-attr-name"><?php echo $this->__('Exchange Code:') ?></div>
+                                <div class="product-attr-val"><?php echo $_product->getSku() ?></div>
+                            </div>
+                            <div class="product-attr">
+                                <div class="product-attr-name"><?php echo $this->__('Market Price:') ?></div>
+                                <div class="product-attr-val"><?php echo $this->getChildHtml('product_type_data') ?></div>
+                            </div>
+                            <?php if(Mage::getSingleton('customer/session')->isLoggedIn()):?>
+                            <div class="product-attr">
+                                <div class="product-attr-name"><?php echo $this->__('Required Points:') ?></div>
+                                <div class="product-attr-val"><?php echo Mage::helper('points')->getProductPoints($_product); ?><?php echo $this->__('Points')?></div>
+                            </div>
+                            <?php else:?>
+                            <div class="product-attr">
+                                <div class="product-attr-name"><?php echo $this->__('Required Points:') ?></div>
+                                <div class="product-attr-val"><?php echo $this->__('Login to get the required points')?></div>
+                            </div>
+                            <?php endif?>
+                        <?php endif;?>
+
+                        <?php //echo $this->getReviewsSummaryHtml($_product, false, true)?>
+                        <?php //echo $this->getChildHtml('alert_urls') ?>
+                        <?php //echo $this->getChildHtml('product_type_data') ?>
+                        <?php //echo $this->getTierPriceHtml() ?>
+                        <!-- Add New Code Here -->
+
+                        <!-- End -->
+                        <?php echo $this->getChildHtml('extrahint') ?>
+
+                        <?php if (!$this->hasOptions()):?>
+                            <div class="add-to-box">
+                                <?php if($_product->isSaleable()): ?>
+                                    <?php echo $this->getChildHtml('addtocart') ?>
+                                <?php else: ?>
+                                     <?php echo $this->getChildHtml('addtocart') ?>
+                                <?php endif; ?>
+                                <?php //echo $this->getChildHtml('addto') ?>
+                            </div>
+                            <?php echo $this->getChildHtml('extra_buttons') ?>
+
+                        <?php endif; ?>
 
 
-                <?php echo $this->getChildHtml('other');?>
-
-                <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-                    <?php echo $this->getChildChildHtml('container1', '', true, true) ?>
-                <?php endif;?>
+                        <?php echo $this->getChildHtml('other');?>
 
 
+                        <?php if ($_product->isSaleable() && $this->hasOptions()):?>
+                            <?php echo $this->getChildChildHtml('container1', '', true, true) ?>
+                        <?php endif;?>
+                    </div>
+                    <div class="product-intro">
 
-            <?php foreach ($this->getChildGroup('detailed_info', 'getChildHtml') as $alias => $html):?>
-                <div class="box-collateral <?php echo "box-{$alias}"?>">
-                    <?php if ($title = $this->getChildData($alias, 'title')):?>
-                    <h2><?php echo $this->escapeHtml($title); ?></h2>
-                    <?php endif;?>
-                    <?php echo $html; ?>
-                </div>
-            <?php endforeach;?>
+
+
+
+                        <?php foreach ($this->getChildGroup('detailed_info', 'getChildHtml') as $alias => $html):?>
+                            <div class="box-collateral <?php echo "box-{$alias}"?>">
+                                <div class="product-name">
+                                    <h1><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></h1>
+                                </div>
+                                <?php echo $html; ?>
+                            </div>
+                        <?php endforeach;?>
                         <!-- JiaThis Button BEGIN -->
-    <div class="jiathis_style">
-    <a class="jiathis_button_tsina"><img src="<?php echo $this->getSkinUrl('images/sina-icon.png') ?>"/></a>
-    <a class="jiathis_button_email"><img src="<?php echo $this->getSkinUrl('images/mail-to.png') ?>"/></a>
-    </div>
-    <script type="text/javascript" >
-    var jiathis_config={
-        summary:"",
-        shortUrl:false,
-        hideMore:false
-    }
-    </script>
-    <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js" charset="utf-8"></script>
-    <!-- JiaThis Button END -->
-
-            </div>
-
+                        <div class="jiathis_style">
+                            <a class="jiathis_button_tsina"><img src="<?php echo $this->getSkinUrl('images/sina-icon.png') ?>"/></a>
+                            <a class="jiathis_button_email"><img src="<?php echo $this->getSkinUrl('images/mail-to.png') ?>"/></a>
+                        </div>
+                        <script type="text/javascript" >
+                            var jiathis_config={
+                                summary:"",
+                                shortUrl:false,
+                                hideMore:false
+                            }
+                        </script>
+                        <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js" charset="utf-8"></script>
+                        <!-- JiaThis Button END -->
+                    </div>
 
 
-            <div class="clearer"></div>
-            <?php if ($_product->isSaleable() && $this->hasOptions()):?>
-                <?php echo $this->getChildChildHtml('container2', '', true, true) ?>
-            <?php endif;?>
-        </form>
-        <script type="text/javascript">
-        //<![CDATA[
-            var productAddToCartForm = new VarienForm('product_addtocart_form');
-            productAddToCartForm.submit = function(button, url) {
-                if (this.validator.validate()) {
-                    var form = this.form;
-                    var oldUrl = form.action;
+                    <div class="clearer"></div>
+                    <?php if ($_product->isSaleable() && $this->hasOptions()):?>
+                        <?php echo $this->getChildChildHtml('container2', '', true, true) ?>
+                    <?php endif;?>
+                </form>
+                <script type="text/javascript">
+                //<![CDATA[
+                    var productAddToCartForm = new VarienForm('product_addtocart_form');
+                    productAddToCartForm.submit = function(button, url) {
+                        if (this.validator.validate()) {
+                            var form = this.form;
+                            var oldUrl = form.action;
 
-                    if (url) {
-                       form.action = url;
-                    }
-                    var e = null;
-                    try {
-                        this.form.submit();
-                    } catch (e) {
-                    }
-                    this.form.action = oldUrl;
-                    if (e) {
-                        throw e;
-                    }
+                            if (url) {
+                               form.action = url;
+                            }
+                            var e = null;
+                            try {
+                                this.form.submit();
+                            } catch (e) {
+                            }
+                            this.form.action = oldUrl;
+                            if (e) {
+                                throw e;
+                            }
 
-                    if (button && button != 'undefined') {
-                        button.disabled = true;
-                    }
-                }
-            }.bind(productAddToCartForm);
-
-            productAddToCartForm.submitLight = function(button, url){
-                if(this.validator) {
-                    var nv = Validation.methods;
-                    delete Validation.methods['required-entry'];
-                    delete Validation.methods['validate-one-required'];
-                    delete Validation.methods['validate-one-required-by-name'];
-                    // Remove custom datetime validators
-                    for (var methodName in Validation.methods) {
-                        if (methodName.match(/^validate-datetime-.*/i)) {
-                            delete Validation.methods[methodName];
+                            if (button && button != 'undefined') {
+                                button.disabled = true;
+                            }
                         }
-                    }
+                    }.bind(productAddToCartForm);
 
-                    if (this.validator.validate()) {
-                        if (url) {
-                            this.form.action = url;
+                    productAddToCartForm.submitLight = function(button, url){
+                        if(this.validator) {
+                            var nv = Validation.methods;
+                            delete Validation.methods['required-entry'];
+                            delete Validation.methods['validate-one-required'];
+                            delete Validation.methods['validate-one-required-by-name'];
+                            // Remove custom datetime validators
+                            for (var methodName in Validation.methods) {
+                                if (methodName.match(/^validate-datetime-.*/i)) {
+                                    delete Validation.methods[methodName];
+                                }
+                            }
+
+                            if (this.validator.validate()) {
+                                if (url) {
+                                    this.form.action = url;
+                                }
+                                this.form.submit();
+                            }
+                            Object.extend(Validation.methods, nv);
                         }
-                        this.form.submit();
-                    }
-                    Object.extend(Validation.methods, nv);
-                }
-            }.bind(productAddToCartForm);
-        //]]>
-        </script>
-        </div>
-        <div class="instruction">
-    <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('instruction')->toHtml(); ?>
+                    }.bind(productAddToCartForm);
+                //]]>
+                </script>
+                </div>
+                <div class="instruction">
+            <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('instruction')->toHtml(); ?>
+
 
 
         </div>
-
-    </div>
+        </div>
+        </div>
     </div>
 </div>
