--- a/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
@@ -41,10 +41,10 @@
                         <div class="club_memberreg_fi cs-clear">
                              <input type="text" name="telephone" placeholder="<?php echo $this->__("Telephone")?>" alt="telephone" id="telephone" class="input-text required-entry" value="" autocomplete="off">
                         </div>
-                        <span class="second">60</span>s
+                        
                     </div>
                     <div class="buttons-set">
-                        <button type="submit" title="<?php echo $this->__('Submit') ?>" class="club_member_sub"><span><span><?php echo $this->__('Submit') ?></span></span></button>
+                        <button type="submit" title="<?php echo $this->__('Submit') ?>" class="club_member_sub"><span class="second hideme">60</span><span class="submit-text"><span><?php echo $this->__('Submit') ?></span></span></button>
                     </div>
                 </div>
             </form>
