--- a/app/design/frontend/default/default/template/page/html/header.phtml
+++ b/app/design/frontend/default/default/template/page/html/header.phtml
@@ -51,12 +51,12 @@
                     <li><a data-title="STREET-SNAP" href='<?php echo getOfficeSiteURL("streetsnap")?>' title="streetsnap" index='6'><?php echo $this->__("STREET SNAP")?></a></li>
                 </ol>
             </li>
-            <li class='item'>
+            <li class='item active'>
                 <h2 data-title="LILY-CLUB"><?php echo $this->__("VIP CLUB")?></h2>
                 <ol>
-                    <li><a data-title="LILY-CLUB" href='<?php echo getClubSiteURL("custom/account/login")?>' index='9'><?php echo $this->__("LILY CLUB")?></a></li>
-                    <li><a data-title="TERMS" href='<?php echo getClubSiteURL("club_memberrules.html")?>' index='10'><?php echo $this->__("TERMS")?></a></li>
-                    <li><a data-title="POINT CHECKING" href='<?php echo getClubSiteURL("club_pointinfo.html")?>' index='11'><?php echo $this->__("POINT CHECKING")?></a></li>
+                    <li><a data-title="LILY-CLUB" href='<?php echo getClubSiteURL("customer/account")?>' index='9'><?php echo $this->__("LILY CLUB")?></a></li>
+                    <li><a data-title="TERMS" href='<?php echo getOfficeSiteURL("club_memberrules.html")?>' index='10'><?php echo $this->__("TERMS")?></a></li>
+                    <li><a data-title="POINT CHECKING" href='<?php echo getOfficeSiteURL("club_pointinfo.html")?>' index='11'><?php echo $this->__("POINT CHECKING")?></a></li>
                     <li><a data-title="REDEMPTION" href='<?php echo getClubSiteURL("club_gifthis.html")?>' index='12'><?php echo $this->__("REDEMPTION")?></a></li>
                 </ol>
             </li>
