--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -108,6 +108,10 @@
 .club_club_pointproinfo{float: left;width: 320px}
 .club_club_pointprolist{padding:20px 0 0;}
 .club_club_pointprolist .club_img{float: left;display: inline;margin: 0 20px 0 0}
+.club_img img {
+	width:100%;
+	height: 100%;
+}
 .club_club_pointproinfo{}
 .club_club_pointproinfo li{width: 320px;float: left;padding:0 0 30px;}
 .club_club_pointproinfo span{float: left;width: 160px;}
