--- a/skin/frontend/default/default/css/styles.css
+++ b/skin/frontend/default/default/css/styles.css
@@ -545,7 +545,7 @@ tr.summary-details-excluded { font-style:italic; }
     /*position: absolute;*/
     position: fixed;
     top: 0;
-	z-index:10}
+	z-index:11}
 #weibo{margin-right:10px;}
 body.points-checkout-psucceed,
 body.points-checkout-pfailure,
@@ -1892,7 +1892,12 @@ border-radius: 2px;
 
 
 /* Content Styles ================================================================= */
-.product-name { margin:0; font-size:1.2em; font-weight:bold; }
+.product-name { margin:0; font-size:1.2em; font-weight:bold; position: absolute;
+top: 10%;
+font-size: 0.9em;
+width: 100%;
+text-align: center;}
+
 .product-name a {  }
 
 /* Product Tags */
