--- a/app/design/frontend/default/default/template/checkout/cart/noItems.phtml
+++ b/app/design/frontend/default/default/template/checkout/cart/noItems.phtml
@@ -24,11 +24,11 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="cart-empty">
-    <p><?php echo $this->__('You have no items in your shopping cart.') ?></p>
-    <p>
-
-	<button onclick="setLocation('<?php echo $this->getUrl('giftproducts.html')?>')" class="button btn-continue" title="继续兑换" type="button"><span><span><?php echo $this->__("Return to gift page")?></span></span></button>
-	</p>
-
+<div class="page page_club">
+    <div class="cart-empty">
+        <p><?php echo $this->__('You have no items in your shopping cart.') ?></p>
+        <p>
+            <button onclick="setLocation('<?php echo $this->getUrl('giftproducts.html')?>')" class="button btn-continue" title="继续兑换" type="button"><span><span><?php echo $this->__("Return to gift page")?></span></span></button>
+        </p>
+    </div>
 </div>
