--- a/app/design/frontend/base/default/template/checkout/cart.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart.phtml
@@ -31,6 +31,8 @@
  * @see Mage_Checkout_Block_Cart
  */
 ?>
+
+<div class="page page_club">
 <div class="cart">
     <div class="page-title title-buttons">
         <h1><?php echo $this->__('Shopping Cart') ?></h1>
@@ -160,4 +162,5 @@
             <?php endif; ?>
         </div>
     </div>
+</div>
 </div>
