--- a/app/design/frontend/base/default/template/points/order/history.phtml
+++ b/app/design/frontend/base/default/template/points/order/history.phtml
@@ -27,27 +27,29 @@
 
 <div class="page page_club">
     <div class="club_tit ">
-        <h2><?php echo $this->__("point<br />history")?></h2>
+        <h2><?php echo $this->__("Point<br />History")?></h2>
     </div>
     <div class="club_ecoupon_center cs-clear">
         <div class="club_ecoupon_nav">
             <div class="club_welcome">
-                <?php echo $this->__("Hi")?> <?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname();?> ! <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", Mage::getSingleton('customer/session')->getCustomer()->getUsePoints())  ?>
+                <?php echo $this->__("Hi")?> <?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname();?>,<br/> <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", Mage::getSingleton('customer/session')->getCustomer()->getUsePoints())  ?>
             </div>
             <a class="club_logout" href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>customer/account/logout/"><?php echo $this->__("LOGOUT")?></a>
             <div class="club_navlist">
-                <a href="<?php echo $this->getUrl("customer/account/edit/")?>"><?php echo $this->__("My Account")?></a>
+                <a href="<?php echo $this->getUrl("customer/account/edit/")?>"><?php echo $this->__("Account informations")?></a>
+                <a href="<?php echo $this->getUrl("sales/order/history/")?>"><?php echo $this->__("Gift history")?></a>
                 <a href="<?php echo $this->getUrl("wishlist")?>"><?php echo $this->__("My wishlist")?></a>
-                <a href="<?php echo $this->getUrl("giftproducts.html")?>"><?php echo $this->__("Giftcard")?></a>
+                <a href="<?php echo $this->getUrl("customer/account/point/")?>"><?php echo $this->__("Point informations")?></a>
+                <a href="<?php echo $this->getUrl("customer/account/ecoupon/")?>" class=""><?php echo $this->__("E-coupon")?></a>
+            </div>
+            <div class="cs-clear">
+                <!-- <a href="#" class="club_giftcardcheckout">CHECK OUT</a> -->
+                <a href="<?php echo $this->getUrl("giftproducts.html")?>" class="club_navlist_gogift"><?php echo $this->__("Go to Gift Exchange")?></a>
             </div>
         </div>
         <div class="club_ecoupon_com club_point">
             <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
             <?php $_orders = $this->getOrders(); ?>
-            <div class="welcome"><?php echo $this->__('Hi,')?><span class="welcome-customer"><?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname(); ?></span><?php echo $this->__('.Welcome to Lily Official.')?>
-            <a href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>customer/account/logout/" id="logout_link"><?php echo $this->__('Log Out')?></a>
-            </div><div class="clear"></div>
-            <br/>
             <?php //echo $this->getPagerHtml(); ?>
             <?php if($_orders->getSize()): ?>
             <table class="data-table" id="my-orders-table">
