--- a/app/design/frontend/default/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/default/default/template/customer/form/edit.phtml
@@ -28,7 +28,7 @@
     <!--  -->
     <div class="club_login">
         <div class="club_tit ">
-            <h2><?php echo $this->__("member<br />INFORMATION")?></h2>
+            <h2><?php echo $this->__("Member<br />Information")?></h2>
         </div>
         <!-- <p class="club_ecoupon_txt">For system reason,  E coupon information will be synchronized after 24 hours later. </p> -->
         <div class="club_ecoupon_center cs-clear">
@@ -76,11 +76,11 @@
                     <div class="club_meminpwform">
                         <form action="<?php echo $this->getUrl('customer/account/editPost') ?>" method="post" id="form-validate">
                             <div class="cs-clear">
-                                <input type="password" name="current_password" id="current_password"  placeholder="Current password*" />
-                                <input type="password" name="password" id="password" placeholder="New password*" />
-                                <input type="password" name="confirmation" id="confirmation"  placeholder="Confirm new password*" />
+                                <input type="password" name="current_password" id="current_password"  placeholder="<?php echo $this->__("Current password*")?>" />
+                                <input type="password" name="password" id="password" placeholder="<?php echo $this->__("New password*")?>" />
+                                <input type="password" name="confirmation" id="confirmation"  placeholder="<?php echo $this->__("Confirm new password*")?>" />
                             </div>
-                            <input type="submit" value="Save" class="club_meminpwsub" />
+                            <input type="submit" value="<?php echo $this->__("Save")?>" class="club_meminpwsub" />
                         </form>
                     </div>
                 </div>
