--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -8,6 +8,7 @@
 .page_club>div {opacity:0;}
 .page_club a:hover {text-decoration: underline;}
 .club_tit,.page-title h1{font-size: 80px;line-height:88px;text-transform:uppercase;text-align: center;padding:0 0 50px;font-family:arial;}
+.club_tit .small {font-size:40px;}
 .club_login{}
 .club_login_tit{}
 .club_login_txt{margin: 0 auto;width: 685px;text-align: center;}
